gccida/c3/alloc_gcse_mem
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1457:6: error: use of undeclared identifier 'v8'
rtx *v8; // r14 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1463:6: error: use of undeclared identifier 'v14'
rtx *v14; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1471:1: error: use of undeclared identifier 'uid_cuid_1'; did you mean 'uid_cuid'?
uid_cuid_1 = v3; 
^~~~~~~~~~
uid_cuid
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:383:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1490:1: error: use of undeclared identifier 'v8'
v8 = ( rtx *)xmalloc( ( unsigned int)v7); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1490:13: error: expected expression
v8 = ( rtx *)xmalloc( ( unsigned int)v7); 
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1491:13: error: use of undeclared identifier 'v8'
cuid_insn = v8; 
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1493:9: error: use of undeclared identifier 'v8'
memset( v8, 0, v7); 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1499:1: error: use of undeclared identifier 'v8'
v8[v10] = v1; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1508:26: error: expected expression
modify_mem_list = ( rtx *)xmalloc( v12); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1511:14: error: expected expression
v14 = ( rtx *)xmalloc( v13); 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1511:1: error: use of undeclared identifier 'v14'
v14 = ( rtx *)xmalloc( v13); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1512:25: error: use of undeclared identifier 'v14'
canon_modify_mem_list = v14; 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/gcse.c:1514:9: error: use of undeclared identifier 'v14'
memset( v14, 0, 8LL * ( int)n_basic_blocks); 
        ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_gcse_mem/src/obj/gcse.o] Error 1
